--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+        <!-- Primary Meta Tags -->
+        <link rel="shortcut icon" href="URL">
+        <link rel="apple-touch-icon" href="URL">
+        <meta name="title" content="TITLE" />
+        <meta name="description" content="DESC" />
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="URL" />
         <meta property="og:title" content="TITLE" />
         <meta property="og:description" content="DESC" />
+        <meta property="og:image" content="URL"/>
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="URL" />
+        <meta property="twitter:title" content="TITLE" />
+        <meta property="twitter:description" content="DESC" />
+        <meta name="theme-color" content="COLOR" />
+        <meta property="twitter:image" content="URL"/>
+
         <title>Title</title>
+
         <link rel="stylesheet" href="./styles/style.css">
     </head>
     <body>
